option(META_HPP_DEVELOP_WITH_COVERAGE "Build develop targets with coverage" OFF)
option(META_HPP_DEVELOP_WITH_SANITIZERS "Build develop targets with sanitizers" OFF)
option(META_HPP_DEVELOP_WITH_NO_EXCEPTIONS "Build develop targets with no exceptions" ${META_HPP_NO_EXCEPTIONS})
option(META_HPP_DEVELOP_WITH_NO_RTTI "Build develop targets with no RTTI" ${META_HPP_NO_RTTI})

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake")
list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

include(DisableExceptions)
include(DisableRTTI)
include(EnableASan)
include(EnableGCov)
include(EnableUBSan)
include(SetupTargets)

add_subdirectory(manuals)
add_subdirectory(singles)
add_subdirectory(unbench)
add_subdirectory(unshared)
add_subdirectory(untests)
add_subdirectory(vendors)
